# simsearch

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  conanfile.txt  dir_struct.txt  float16_test.cpp  float8_test.cpp  json.json  run_benchmarks.sh  valgrind_profiling.sh
include/: aligned_types.h  avx2_popcount.h  avx2_popcount_harley_seal.h  common_structs.h  config.h  config_manager.h  embedding_io.h  embedding_search.h  embedding_search_avx2.h  embedding_search_avx2.h.b  embedding_search_base.h  embedding_search_binary.h  embedding_search_binary_avx2.h  embedding_search_float.h  embedding_search_float16.h  embedding_search_float_int8.h  embedding_search_mapped_float.h  embedding_search_uint8_avx2.h  embedding_utils.h  float16.h  optimized_embedding_search_avx2.h  optimized_embedding_search_binary_avx2.h  optimized_embedding_search_mapped_float.h  optimized_embedding_search_uint8_avx2.h  simplified_float.h  simplified_float2.h  stats_exporter.h  util.h
memory_benchmark/: README.md  memory_benchmark.c
python/: README.md  create_embeddings.py  start_create_embeddings.py
python/benchmark/: README.md  benchmark_v2.py  run_benchmarks.sh
python/emb_search_server/: README.md  config.json  main.py
python/emb_search_server/static/: index.html
python/jupyter/: README.md  plots_v2.ipynb
python/jupyter/results/: mapped_float_partitions.txt  mapped_float_partitions_768.txt  rename_script.py
python/query_embeddings/: 3_queries_emb.jsonl  3_queries_emb_mpnet.jsonl  README.md  query_embeddings_20241027_002744.jsonl  query_embeddings_20241027_210502.jsonl  query_example.jsonl  spec_wiki_queries.json  spec_wiki_queries_emb.jsonl  spec_wiki_queries_emb_mpnet.jsonl  specific_queries.json  specific_queries_emb.jsonl  specific_queries_emb_mpnet.jsonl  stupid_queries.json  stupid_queries_emb.jsonl  stupid_queries_emb_mpnet.jsonl  wiki_queries.json  wiki_queries_emb.jsonl  wiki_queries_emb_mpnet.jsonl
src/: embedding_io.cpp  embedding_search.cpp  embedding_search_avx2.cpp  embedding_search_avx2.cpp.b  embedding_search_benchmark_bindings.cpp  embedding_search_binary.cpp  embedding_search_binary_avx2.cpp  embedding_search_bindings.cpp  embedding_search_float.cpp  embedding_search_float16.cpp  embedding_search_float_int8.cpp  embedding_search_mapped_float.cpp  embedding_search_uint8_avx2.cpp  embedding_utils.cpp  main.cpp  optimized_embedding_search_avx2.cpp  optimized_embedding_search_binary_avx2.cpp  optimized_embedding_search_mapped_float.cpp  optimized_embedding_search_uint8_avx2.cpp  util.cpp
written_bachelor_thesis/: header.tex  main.tex  structure.md  thesis.md
written_bachelor_thesis/kapitel/: appendix.tex  bibliography.tex  conclusion.tex  exp_evaluation.tex  future_work.tex  implementation.tex  introduction.tex  opt_approaches.tex  theoretical_backgr.tex  titelseite.tex
written_bachelor_thesis/literatur/: diplom.bib
written_bachelor_thesis/notes/: kernel_version.txt
